[package]
name = "eth_clickhouse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clickhouse = "0.14.0"          
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "1.0.2", features = ["rustls"] }
anyhow = "1.0"
reqwest = { version = "0.12.24", features = ["json"] }
